...
        label.textColor = color
        
        return label
    }
    
    func makeLogoutAlert() -> UIAlertController {
        let alertController = UIAlertController(title: "Пока, пока!",
                                                message: "Уверены что хотите выйти?",
                                                preferredStyle: .alert)
        
        let yesAction = UIAlertAction(title: "Да", style: .default) { [weak self] _ in
            
            guard let self = self else { return }
            
            self.logoutService.logout()
            self.switchToSplashScreen()
        }
...
