...
        if let createdDate = photo.createdAt {
            cell.dateLabel.text = self.dateFormatter.string(from: createdDate)
        } else {
            cell.dateLabel.text = ""
        }
        
        let likeImage: UIImage? = photo.isLiked ? UIImage(named: "ActiveLike") : UIImage(named: "NoActiveLike")
        cell.likeButton.setImage(likeImage, for: .normal)
        cell.likeButton.accessibilityIdentifier = photo.isLiked ? "ActiveLike" : "NoActiveLike"
    }
    
    func didTapLikeButton(at indexPath: IndexPath) {
        
...
