...
                                <connections>
                                    <outlet property="delegate" destination="7Iy-g3-2tW" id="KXB-qt-8ho"/>
                                </connections>
                            </scrollView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="grC-oT-Ceb" userLabel="BackButton">
                                <rect key="frame" x="8" y="58" width="44" height="44"/>
                                <accessibility key="accessibilityConfiguration" identifier="backward_button"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="44" id="H8b-6k-Jgz"/>
                                    <constraint firstAttribute="height" constant="44" id="Kyx-bS-Zhe"/>
                                </constraints>
                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                <state key="normal" image="backward_button "/>
...
                                    <constraint firstAttribute="width" constant="60" id="Oki-l0-cpi"/>
                                </constraints>
                            </imageView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ipQ-Oz-Enh">
                                <rect key="frame" x="16" y="640" width="343" height="48"/>
                                <color key="backgroundColor" name="YP White"/>
                                <accessibility key="accessibilityConfiguration" identifier="Authenticate"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="48" id="fcv-2s-ynz"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                <state key="normal" title="Войти">
...
